k8s/apps/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-headless
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
spec:
  clusterIP: None
  ports:
    - name: rpc
      port: 3901
      targetPort: 3901
  selector:
    app.kubernetes.io/name: garage
---
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
spec:
  type: ClusterIP
  ports:
    - name: s3-api
      port: 3900
      targetPort: 3900
    - name: s3-web
      port: 3902
      targetPort: 3902
    - name: admin-api
      port: 3903
      targetPort: 3903
  selector:
    app.kubernetes.io/name: garage
