k8s/apps/garage/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: garage
  namespace: garage
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.192.168.39.202.nip.io"
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.192.168.39.202.nip.io"
      tls:
        mode: Terminate
        certificateRefs:
          - name: garage-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
  namespace: garage
spec:
  parentRefs:
    - name: garage
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
